--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,10 @@
 // Body
 $body-bg: #f8fafc;
+$primary: #036;
+$info: #666600;
+$secondary: #660000;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Montserrat', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
