--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,82 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.no-auth {
+    .btn {
+        margin: 0.25rem 0.125rem;
+    }
+}
+
+.card-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #036;
+    color: #ffffff;
+    strong {
+        font-size: 20px;
+        letter-spacing: 1px;
+    }
+    button {
+        color: #ffffff;
+    }
+}
+.error {
+    color: #dc3545;
+}
+
+.form-control-lg {
+    flex: 1;
+    border-width: 1px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.url-list-header {
+    border-bottom: 1px rgba(0, 0, 0, 0.05) solid;
+    padding-bottom: 1rem;
+    span {
+        padding: 1rem;
+        font-size: 16px;
+        font-weight: 700;
+        color: rgba(0, 0, 0, 0.54);
+    }
+}
+
+.url-list {
+    padding-left: unset;
+    list-style-type: none;
+    li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem;
+        &:nth-child(2n) {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+        a {
+            color: rgba(0, 0, 0, 0.87);
+            font-size: 16px;
+        }
+        button {
+            font-size: 16px;
+            border: none;
+            background-color: transparent;
+            color: #dc3545;
+            border-radius: 1rem;
+            padding: 0.5rem 1rem;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+    }   
+}
+
+.empty {
+    padding: 1rem;
+}
